plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    implementation 'ru.odnoklassniki:one-nio:1.6.1'
    
    implementation 'org.slf4j:slf4j-api:1.7.32'
    implementation 'org.slf4j:slf4j-log4j12:1.7.32'

    testImplementation 'junit:junit:4.13.2'
}

application {
    mainClass = 'cellarium.Main'
    applicationDefaultJvmArgs = ["--add-modules", "jdk.incubator.foreign"]
}

jar {
    manifest {
        attributes 'Main-Class': 'cellarium.Main'
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

final args = ["--add-modules", "jdk.incubator.foreign"]

tasks.all {
    if (it instanceof JavaCompile) {
        it.options.compilerArgs += args
    } else if (it instanceof Test) {
        it.jvmArgs += args
    }
}

run {
    jvmArgs += ["--add-modules", "jdk.incubator.foreign"]
}